@@ -471,6 +471,9 @@ OCaml 4.09 maintenance branch:
 - #8965, #8979: Alpine build failure caused by check-parser-uptodate-or-warn.sh
   (Gabriel Scherer and David Allsopp, report by Anton Kochkov)
 
+- #9050, #9076: install missing compilerlibs/ocamlmiddleend archives
+  (Gabriel Scherer, review by Florian Angeletti, report by Olaf Hering)
+
 OCaml 4.09.0 (19 September 2019):
 ---------------------------------
 
